--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
     <!-- bootstrap cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- bootstrap cdn -->
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/7c52814436.js" crossorigin="anonymous"></script>
+    <!-- font awesome -->
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&family=Roboto:ital,wght@0,100;0,300;1,300&display=swap" rel="stylesheet">
+    <!-- google font -->
     <meta
       name="description"
       content="Web site created using create-react-app"
